--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,7 @@
 BASEURL=/api/v1
 NODE_ENV=development
 PORT=5000
-DATABASE_LOCAL=mongodb://localhost:27017/hiof
+DATABASE_LOCAL=mongodb://localhost:27017/polling
+JWT_SECRET=secret
+JWT_EXPIRES_TIME=7d
+COOKIE_EXPIRE_TIME=7
